--- a/package.json
+++ b/package.json
@@ -145,7 +145,7 @@
     "react-native": "local-cli/wrong-react-native.js"
   },
   "peerDependencies": {
-    "react": "16.7.0-alpha.2"
+    "react": "16.8.1"
   },
   "dependencies": {
     "@babel/runtime": "^7.0.0",
@@ -220,9 +220,9 @@
     "jest": "23.4.1",
     "jest-junit": "5.1.0",
     "prettier": "1.13.6",
-    "react": "16.7.0-alpha.2",
+    "react": "16.8.1",
     "react-native-dummy": "0.1.0",
-    "react-test-renderer": "16.7.0-alpha.2",
+    "react-test-renderer": "16.8.1",
     "shelljs": "^0.7.8"
   },
   "detox": {
